2010-04-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* m/mips.h: Remove #if 0 code.

2010-04-23  Eli Zaretskii  <eliz@gnu.org>

	Fix display of composed characters from L2R scripts in bidi buffers.
	* xdisp.c (set_iterator_to_next, next_element_from_composition):
	After advancing IT past the composition, resync the bidi iterator
	with IT's position.  (Bug#5977)

2010-04-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* Makefile.in (LD_SWITCH_MACHINE_TEMACS): Remove, unused.
	(TEMACS_LDFLAGS): Don't use LD_SWITCH_SYSTEM_TEMACS.

2010-04-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gtkutil.c: Include xsettings.h for Ftool_bar_get_system_style.

2010-04-23  Eli Zaretskii  <eliz@gnu.org>

	Support `display' text properties and overlay strings in bidi
	buffers.
	* xdisp.c (pop_it): When the stack is popped after displaying
	from a string, bidi-iterate to exit from the text portion covered
	by the `display' property or overlay.  (Bug#5988, bug#5920)

2010-04-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* m/macppc.h (LD_SWITCH_SYSTEM_TEMACS): Remove #undef.
	(LD_SWITCH_MACHINE_TEMACS): Remove, configure sets nocombreloc.

	* s/netbsd.h (LD_SWITCH_SYSTEM_TEMACS): Remove, configure sets nocombreloc.
	* s/openbsd.h (LD_SWITCH_SYSTEM_TEMACS): Remove.

	Simplify STARTFILES definition.
	* s/hpux10-20.h (START_FILES): Explicitly define here instead of
	relying on Makefile.in to define it.
	* s/cygwin.h (START_FILES): Likewise.
	* Makefile.in (STARTFILES): Remove conditional code, not needed anymore.

	Clean up Solaris code.
	* s/sol2-6.h (LD_SWITCH_SYSTEM_TEMACS, C_SWITCH_X_SYSTEM)
	(LIB_MOTIF): Remove, configure takes care of this.
	(NOT_USING_MOTIF): Remove, unused.
	* xrdb.c: Remove #if 0-ed #include.
	(SYSV): Remove conditional for old SysV.
	* sysdep.c (closedir): Remove conditional code for Solaris,
	Solaris has closedir.

2010-04-22  Jan Djärv  <jan.h.d@swipnet.se>

	* xsettings.c (read_and_apply_settings): Check if current_font is
	NULL before strcmp (Bug#6001).
